catkin_ws/logs/backend/build.make.1093.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:337:4: warning: multi-line comment [-Wcomment]
    // cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::parallelMatching()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:553:8: warning: variable ‘prevId’ set but not used [-Wunused-but-set-variable]
    int prevId = -1;
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:286:53: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints3D().size();i++)
                                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:292:50: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i< frame.getKeypoints().size();i++)
                                                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:300:41: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getImuCompensateCounter()== badFrameCnt)
                                         ^
In file included from /usr/include/eigen3/Eigen/Core:254:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Frontend.h:16,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:14:
/usr/include/eigen3/Eigen/src/Core/Matrix.h: In instantiation of ‘Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::Matrix(const Eigen::MatrixBase<OtherDerived>&) [with OtherDerived = Eigen::CwiseNullaryOp<Eigen::internal::scalar_identity_op<double>, Eigen::Matrix<double, 6, 6> >; _Scalar = float; int _Rows = 6; int _Cols = 6; int _Options = 0; int _MaxRows = 6; int _MaxCols = 6]’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:327:85:   required from here
/usr/include/eigen3/Eigen/src/Core/util/StaticAssert.h:32:40: error: static assertion failed: YOU_MIXED_DIFFERENT_NUMERIC_TYPES__YOU_NEED_TO_USE_THE_CAST_METHOD_OF_MATRIXBASE_TO_CAST_NUMERIC_TYPES_EXPLICITLY
     #define EIGEN_STATIC_ASSERT(X,MSG) static_assert(X,#MSG);
                                        ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:277:7: note: in expansion of macro ‘EIGEN_STATIC_ASSERT’
       EIGEN_STATIC_ASSERT((internal::is_same<Scalar, typename OtherDerived::Scalar>::value),
       ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
